CodeNames v1.0.0 changelog:
 * Initial release