@@ -13,6 +13,8 @@
 	<!-- Use during development. Add new lines as needed -->
 	<script type="text/javascript" src="src/app.js"></script>
 	<script type="text/javascript" src="src/main.js"></script>
+	<script type="text/javascript" src="src/pageMain.js"></script>
+	<script type="text/javascript" src="src/pageGame.js"></script>
 	<script type="text/javascript" src="src/pages.js"></script>
 	<script type="text/javascript" src="src/ajax.js"></script>
 	<script type="text/javascript" src="src/utils.js"></script>
