@@ -11,7 +11,7 @@ call C:\tools\doomsh.cmd
 
 cd app
 cd src
-jsbloat *.js -H hints.txt
+jsbloat app.js main.js pageMain.js pageGame.js pages.js ajax.js utils.js words.js -H hints.txt
 cmd /c minify concat.min.js -o ..\app.min.js
 del concat.min.js
 cd ..
@@ -28,6 +28,11 @@ set outdir=..\RELEASE\%appname%-%version%
 
 echo Phase 3 - Building output filesys
 mkdir %outdir%
+mkdir %outdir%\backend
 robocopy . %outdir% index.html app.min.js app.min.css CHANGELOG.txt
+copy backend\entry.php %outdir%\backend
+copy backend\fio.php %outdir%\backend
 del app.min.js app.min.css
 cd ..
+
+pause
